samples/_failures_safe/1761375477_4bb953_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9f99b495.c: In function ‘tokenize’:
./samples/SAFE/__tmp_9f99b495.c:172:9: error: expected expression at end of input
  172 |         } else
      |         ^
./samples/SAFE/__tmp_9f99b495.c:172:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_9f99b495.c:172:9: error: expected declaration or statement at end of input
